--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,5 @@
 * {
   font-family: sans-serif;
- 
 }
 
 body {
@@ -52,17 +51,17 @@ body {
 }
 
 #cart-item {
-    height: 420px;
-    left: 120px;
-    padding: 10px;
-    position: relative;
-    width: 80%;
+  height: 420px;
+  left: 120px;
+  padding: 10px;
+  position: relative;
+  width: 80%;
 }
 
 #cancel-button {
-    position: relative;
-    right: 10px;
-    top: 135px;
+  position: relative;
+  right: 10px;
+  top: 135px;
 }
 
 #mobile-details {
@@ -86,11 +85,11 @@ body {
 }
 
 #PriceDetail {
-    font-size: large;
-    height: fit-content;
-    left: 100px;
-    position: relative;
-    width: 25%;
+  font-size: large;
+  height: fit-content;
+  left: 100px;
+  position: relative;
+  width: 25%;
 }
 
 #AddContainer {
@@ -106,7 +105,8 @@ body {
   position: absolute;
   right: 3px;
   top: 130px;
-  width: 7.2rem;
+  width: 7.6rem;
+  font-size: 15px;
   white-space: nowrap;
 }
 
@@ -117,8 +117,6 @@ body {
   margin-top: 0.35rem;
   width: 24.9rem;
 }
-
-
 
 #Header-text {
   font-size: 2.2rem;
@@ -153,8 +151,6 @@ body {
   left: 120px;
 }
 
-
-#MainImg{
-  width:24rem
+#MainImg {
+  width: 24rem;
 }
-
